--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "gatsby-starter-portfolio-cara",
-  "description": "Playful & Colorful One-Page website with Parallax effect powered by react-spring, TailwindCSS.",
+  "name": "marcodecara.com",
+  "description": "Marco de Cara's website",
   "version": "3.0.0",
-  "author": "LekoArts <hello@lekoarts.de> (https://www.lekoarts.de)",
+  "author": "Marco de Cara",
   "license": "MIT",
   "dependencies": {
     "babel-plugin-styled-components": "^1.10.0",
@@ -30,7 +30,6 @@
   },
   "keywords": [
     "gatsby",
-    "starter",
     "portfolio"
   ],
   "scripts": {
@@ -53,11 +52,11 @@
     "prettier": "^1.17.0"
   },
   "repository": {
-    "url": "https://github.com/LekoArts/gatsby-starter-portfolio-cara",
+    "url": "https://github.com/marcodca/marcodecara.com",
     "type": "git"
   },
   "bugs": {
-    "url": "https://github.com/LekoArts/gatsby-starter-portfolio-cara/issues"
+    "url": "https://github.com/marcodca/marcodecara.com/issues"
   },
-  "homepage": "https://cara.lekoarts.de"
+  "homepage": "https://marcodecara.com"
 }
