--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
     "styled-components": "^4.2.0",
     "tailwind.macro": "^0.5.10",
     "tailwindcss": "^0.7.4",
-    "typeface-cantata-one": "^0.0.72",
-    "typeface-open-sans": "^0.0.54"
+    "typeface-open-sans": "0.0.54",
+    "typeface-trocchi": "0.0.72"
   },
   "keywords": [
     "gatsby",
