--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "styled-components": "^4.2.0",
     "tailwind.macro": "^0.5.10",
     "tailwindcss": "^0.7.4",
-    "typeface-open-sans": "0.0.54",
+    "typeface-questrial": "0.0.72",
     "typeface-trocchi": "0.0.72"
   },
   "keywords": [
