--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-blob": "^1.0.1",
     "react-dom": "^16.8.6",
     "react-helmet": "^5.2.0",
+    "react-responsive-modal": "^4.0.1",
     "react-spring": "^8.0.19",
     "styled-components": "^4.2.0",
     "tailwind.macro": "^0.5.10",
