--- a/package.json
+++ b/package.json
@@ -5,28 +5,29 @@
   "author": "Marco de Cara",
   "license": "MIT",
   "dependencies": {
-    "babel-plugin-styled-components": "^1.10.0",
-    "gatsby": "^2.3.25",
-    "gatsby-image": "^2.0.39",
-    "gatsby-plugin-google-analytics": "^2.0.18",
-    "gatsby-plugin-manifest": "^2.0.29",
-    "gatsby-plugin-netlify": "^2.0.14",
-    "gatsby-plugin-offline": "^2.0.25",
-    "gatsby-plugin-react-helmet": "^3.0.12",
-    "gatsby-plugin-sharp": "^2.0.35",
-    "gatsby-plugin-styled-components": "^3.0.7",
-    "gatsby-source-filesystem": "^2.0.29",
-    "gatsby-transformer-sharp": "^2.1.18",
+    "babel-plugin-styled-components": "1.10.0",
+    "gatsby": "^2.17.11",
+    "gatsby-image": "^2.2.31",
+    "gatsby-plugin-manifest": "^2.2.27",
+    "gatsby-plugin-offline": "^3.0.19",
+    "gatsby-plugin-react-helmet": "^3.1.14",
+    "gatsby-plugin-sharp": "^2.2.37",
+    "gatsby-source-filesystem": "^2.1.36",
+    "gatsby-transformer-sharp": "^2.3.3",
+    "gatsby-plugin-styled-components": "3.0.7",
+    "gatsby-plugin-netlify": "2.0.14",
+    "gatsby-plugin-google-analytics": "2.0.18",
     "prop-types": "^15.7.2",
-    "react": "^16.8.6",
-    "react-blob": "^1.0.1",
-    "react-dom": "^16.8.6",
-    "react-helmet": "^5.2.0",
-    "react-responsive-modal": "^4.0.1",
-    "react-spring": "^8.0.19",
-    "styled-components": "^4.2.0",
-    "tailwind.macro": "^0.5.10",
-    "tailwindcss": "^0.7.4",
+    "react": "^16.11.0",
+    "react-dom": "^16.11.0",
+    "react-helmet": "^5.2.1",
+    "react-blob": "1.0.1",
+    "react-responsive-modal": "4.0.1",
+    "react-spring": "8.0.19",
+    "sharp": "^0.23.2",
+    "styled-components": "4.2.0",
+    "tailwind.macro": "0.5.10",
+    "tailwindcss": "0.7.4",
     "typeface-questrial": "0.0.72",
     "typeface-trocchi": "0.0.72"
   },
