--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "gatsby-plugin-sharp": "^2.2.37",
     "gatsby-plugin-styled-components": "3.0.7",
     "gatsby-source-filesystem": "^2.1.36",
+    "gatsby-transformer-json": "^2.2.25",
     "gatsby-transformer-sharp": "^2.3.3",
     "prop-types": "^15.7.2",
     "react": "^16.11.0",
