--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -2,16 +2,25 @@
   {
     "title": "Reffen stock",
     "image": "reffen-stock.png",
-    "description": "A simple full-stack web app for keeping track of missing products in the inventory. Build with Node, React, GraphQL, Styled-components and MaterialUI"
+    "description": "A full-stack web app for keeping track of missing products in an inventory. Fully responsive and with PWA functionality.",
+    "techs": "Node, GraphQL, MongoDB, React, Styled-components and MaterialUI.",
+    "source": "https://github.com/marcodca/reffen-stock",
+    "site": "https://reffen-stock.herokuapp.com/"
   },
   {
     "title": "Christiania Rules",
     "image": "christiania-rules.png",
-    "description": "A visual thing man, you know."
+    "description": "A fun visual project involving gestures and animations (desktop only).",
+    "techs": "React, Styled-components and React-Spring.",
+    "source": "https://github.com/marcodca/christiana-rules",
+    "site": "https://christiania-rules.herokuapp.com/"
   },
   {
     "title": "Do it better",
     "image": "do-it-better.png",
-    "description": "A simple thing with subscriptions"
+    "description": "A basic full-stack app, for keeping track of users to-do's with real-time functionality",
+    "techs": "React, GraphQL with Apollo (subscriptions), MongoDB, Styled-components and React-Spring.",
+    "source": "https://github.com/marcodca/do-it-better",
+    "site": "https://do-it-better.herokuapp.com/"
   }
 ]
