--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "gatsby-plugin-offline": "^3.0.19",
     "gatsby-plugin-react-helmet": "^3.1.14",
     "gatsby-plugin-sharp": "^2.2.37",
+    "gatsby-plugin-sitemap": "^2.3.1",
     "gatsby-plugin-styled-components": "3.0.7",
     "gatsby-source-filesystem": "^2.1.36",
     "gatsby-transformer-json": "^2.2.25",
