installing necesary dependencies

--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "@juggle/resize-observer": "^3.2.0",
+    "@react-three/drei": "^3.1.0",
     "babel-plugin-styled-components": "^1.12.0",
     "gatsby": "^2.26.1",
     "gatsby-plugin-react-helmet": "^3.9.0",
@@ -23,6 +25,11 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-helmet": "^6.1.0",
-    "styled-components": "^5.2.1"
+    "react-spring": "^8.0.27",
+    "react-three-fiber": "^5.3.18",
+    "react-use-gesture": "^9.0.0",
+    "styled-components": "^5.2.1",
+    "three": "^0.125.2",
+    "valtio": "^0.6.3"
   }
 }
